# book_ai_evaluation

./: .env.example  .gitignore  README.md  bangla_to_unicode.py  document_section_processor.py  document_section_processor_2.py  main.py  pyproject.toml  unicode_font_converter.py
static/: Modelfile
