[tool.poetry]
name = "book-ai-evaluation"
version = "0.1.0"
description = ""
authors = ["Abdur-Rahim-sheikh <abi.rahim.sheikh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
